# django-saas

./: README.md  setup.cfg
.github/: FUNDING.yml
saas/: __init__.py  admin.py  apps.py  context_processors.py  decorators.py  forms.py  mailer.py  models.py  signals.py  subscription.py  urls.py  views.py
saas/migrations/: 0001_initial.py  0002_auto_20200723_0351.py  0003_auto_20200724_0352.py  0004_acquisition.py  0005_stripeinfo_plan_id.py  0006_stripeevent_event_id_stripeevent_object_id.py
saas/templates/saas/: credit_card_form.html
saas/templatetags/: saas.py
