[metadata]
name = django-saas
version = 1.0.0
description = A toolbox to handle registration and subscriptions
long_description = file:README.md
url = https://github.com/poitch/django-saas
license = BSD 2-Clause
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.7
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django >= 3.0
    stripe >= 2.48
    nh-currency >= 1.0
    django-recaptcha >= 2.0

